# RAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAWAytracer

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  SECURITY.md  build.sh  doxyfile  raytracer.cbp
.github/: issue_template.md  pull_request_template.md
docs/: Api_8hpp_source.html  CameraParser_8hpp_source.html  IEntity_8hpp_source.html  Light_8hpp_source.html  Parser_8hpp_source.html  PluginManager_8hpp_source.html  Plugin_8hpp_source.html  PointLightParser_8hpp_source.html  Sphere_8hpp_source.html  Subscriber_8hpp_source.html  classRayTracer_1_1Camera.js  classRayTracer_1_1Entity_1_1Color.js  classRayTracer_1_1Entity_1_1Entity.html  classRayTracer_1_1Entity_1_1IEntity-members.html  classRayTracer_1_1Entity_1_1IEntity.html  classRayTracer_1_1Entity_1_1IEntity.js  classRayTracer_1_1Light_1_1DirectionalLight-members.html  classRayTracer_1_1Light_1_1Light-members.html  classRayTracer_1_1Light_1_1Light.html  classRayTracer_1_1Light_1_1Light.js  classRayTracer_1_1Light_1_1PointLightParser-members.html  classRayTracer_1_1Parser_1_1CameraParser-members.html  classRayTracer_1_1Parser_1_1CameraParser.js  classRayTracer_1_1Parser_1_1Parser-members.html  classRayTracer_1_1Parser_1_1Parser.html  classRayTracer_1_1Parser_1_1Parser_1_1ParserException-members.html  classRayTracer_1_1Parser_1_1Parser_1_1ParserException.html  classRayTracer_1_1Parser_1_1Parser_1_1ParserException.js  classRayTracer_1_1Parser_1_1PlaneParser-members.html  classRayTracer_1_1Parser_1_1PlaneParser.html  classRayTracer_1_1Parser_1_1SphereParser.html  classRayTracer_1_1Parser_1_1SphereParser.js  classRayTracer_1_1Plugin_1_1PluginManager-members.html  classRayTracer_1_1Plugin_1_1PluginManager.html  classRayTracer_1_1Plugin_1_1PluginManager.js  classRayTracer_1_1Plugin_1_1PluginObserver-members.html  classRayTracer_1_1Plugin_1_1PluginObserver.js  classRayTracer_1_1Plugin_1_1Subscriber.html  classRayTracer_1_1Plugin_1_1Subscriber.js  classRayTracer_1_1Primitives_1_1Plane-members.html  (+28 more)
html/: Camera_8hpp_source.html  Color_8hpp_source.html  DirectionalLight_8hpp_source.html  Entity_8hpp_source.html  PlaneParser_8hpp_source.html  Plane_8hpp_source.html  PluginObserver_8hpp_source.html  PointLight_8hpp_source.html  Point_8hpp_source.html  Scene_8hpp_source.html  SphereParser_8hpp_source.html  Vector_8hpp_source.html  annotated.html  annotated_dup.js  classRayTracer_1_1Camera-members.html  classRayTracer_1_1Camera.html  classRayTracer_1_1Entity_1_1Color-members.html  classRayTracer_1_1Entity_1_1Color.html  (+42 more)
lib/: CMakeLists.txt  CTestTestfile.cmake
lib/Camera/: Api.cpp  CMakeLists.txt  CTestTestfile.cmake  Camera.cpp  Camera.hpp
lib/Color/: Api.cpp  CMakeLists.txt  CTestTestfile.cmake  Color.cpp  Color.hpp
lib/Cone/: Api.cpp  CMakeLists.txt  Cone.cpp  Cone.hpp
lib/Cylinder/: Api.cpp  CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
lib/Light/: CMakeLists.txt  CTestTestfile.cmake  Light.hpp  PointLight.cpp  PointLight.hpp
lib/Light/BasicLight/: Api.cpp  BasicLight.cpp  BasicLight.hpp  CMakeLists.txt
lib/Light/DirectionalLight/: Api.cpp  CMakeLists.txt  CTestTestfile.cmake  DirectionalLight.cpp  DirectionalLight.hpp
lib/Light/PointLight/: Api.cpp  CMakeLists.txt  CTestTestfile.cmake  PointLight.cpp  PointLight.hpp
lib/Plane/: Api.cpp  Plane.cpp  Plane.hpp
lib/Primitives/: CMakeLists.txt  CTestTestfile.cmake  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
lib/Primitives/Cone/: Api.cpp  CMakeLists.txt  Cone.cpp  Cone.hpp
lib/Primitives/Cylinder/: Api.cpp  CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
lib/Primitives/Plane/: Api.cpp  CMakeLists.txt  CTestTestfile.cmake  Plane.cpp  Plane.hpp
lib/Primitives/Sphere/: Api.cpp  CMakeLists.txt  CTestTestfile.cmake  Sphere.cpp  Sphere.hpp
lib/Sphere/: Api.cpp  Sphere.cpp  Sphere.hpp
src/: Api.hpp  CMakeLists.txt  CTestTestfile.cmake  IEntity.hpp  Main.cpp
src/ColorPlugin/: Api.cpp  CMakeLists.txt  Color.cpp  Color.hpp  color.cbp
src/Entity/: AEntityDecorator.cpp  AEntityDecorator.hpp  CMakeLists.txt  CTestTestfile.cmake  DataStructure.hpp  Entity.cpp  Entity.hpp  IEntity.hpp
src/Entity/Primitives/: CMakeLists.txt  Primitives.cpp  Primitives.hpp
src/Entity/Primitives/Sphere/: Sphere.cpp  Sphere.hpp
src/Parser/: CMakeLists.txt  CTestTestfile.cmake  CameraParser.cpp  CameraParser.hpp  LightParser.cpp  LightParser.hpp  Parser.cpp  Parser.hpp  PlaneParser.cpp  PlaneParser.hpp  PointLightParser.cpp  PointLightParser.hpp  PrimitivesParser.cpp  PrimitivesParser.hpp  SphereParser.cpp  SphereParser.hpp
src/Plugin/: CMakeLists.txt  CTestTestfile.cmake  Plugin.cpp  Plugin.hpp  PluginManager.cpp  PluginManager.hpp  PluginObserver.cpp  PluginObserver.hpp  Subscriber.hpp
src/Rendering/: CMakeLists.txt  Pixel.cpp  Pixel.hpp  Renderer.cpp  Renderer.hpp
src/Scene/: CMakeLists.txt  CTestTestfile.cmake  Scene.cpp  Scene.hpp
src/Utils/: CMakeLists.txt  CTestTestfile.cmake  Color.cpp  Color.hpp  Euler.cpp  Euler.hpp  HitPoint.cpp  HitPoint.hpp  Pixel.cpp  Pixel.hpp  Point.cpp  Point.hpp  Ray.cpp  Ray.hpp  Vector.cpp  Vector.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  subject.json  test.json  test_bad_file.json  test_no_cam.json  test_no_lights.json  test_no_pos_cam.json  test_no_primitives.json  test_parser.cpp  unit_tests
(+95 files in other folders)
